# bing-wallpaper

./: Cargo.toml  README.md  config-schema.json
src/: commands.rs  config.rs  jiff_serde.rs  lib.rs  main.rs  opt.rs
tests/: integration.rs
tests/local-state-has-images/config/bing_wallpaper/: config.json
tests/local-state-has-images/state/bing_wallpaper/: image_index.json
tests/snapshots/: integration__end_to_end_test.snap  integration__list_existing_images.snap  integration__list_images-2.snap  integration__show_current.snap
