[package]
name = "bing-wallpaper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.17", features = ["derive"] }
directories = "5.0.1"
jiff = { version = "0.1.12", features = ["serde"] }
rand = "0.8.5"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["full"] }
url = "2.5.2"
